[gd_scene load_steps=10 format=3 uid="uid://cu8ogd3ah2g0x"]

[ext_resource type="Texture2D" uid="uid://b4xofwudsoock" path="res://Assets/BubbleWobble_SpriteSheet.png" id="1_1hnm0"]
[ext_resource type="Script" path="res://scenes/bubble.gd" id="1_7avtq"]
[ext_resource type="PackedScene" path="res://scenes/killzone.tscn" id="3_lpadx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k36sg"]
atlas = ExtResource("1_1hnm0")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_assg8"]
atlas = ExtResource("1_1hnm0")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uohx"]
atlas = ExtResource("1_1hnm0")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i3bm"]
atlas = ExtResource("1_1hnm0")
region = Rect2(100, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_5wxos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k36sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_assg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uohx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i3bm")
}],
"loop": true,
"name": &"move",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wyidt"]
radius = 50.1597

[node name="Bubble" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_7avtq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.578654, 0.769444, 1)
sprite_frames = SubResource("SpriteFrames_5wxos")
animation = &"move"
autoplay = "move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wyidt")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 86)

[node name="BubblePopAudio" type="AudioStreamPlayer2D" parent="."]

[node name="Killzone" parent="." groups=["mob"] instance=ExtResource("3_lpadx")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("CircleShape2D_wyidt")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Killzone" to="." method="_on_killzone_body_entered"]
